k8s/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel-backend
  labels:
    app.kubernetes.io/part-of: rapyd-sentinel
